# Cpp

./: .gitignore  README.md
laba1/: 1-1  1-1.cpp  1-3.cpp  1-5  1-5.cpp  1-7  1-7.cpp  1-9  1-9.cpp  2-1  2-1.cpp  2-3  2-3.cpp  2-5  2-5.cpp  2-7  2-7.cpp  2-9  2-9.cpp  3-1  3-1.cpp  3-3  3-3.cpp  3-5.cpp  3-7  3-7.cpp  3-9.cpp  4-1.cpp  4-3.cpp  4-5.cpp  4-7  4-7.cpp  4-9.cpp  README.md
laba2/: 1  2  3  4  5  6  7  8  9  README.md  zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp  zad9.cpp
laba3/: README.md
laba3/1.1/: 1  Name.cpp  Name.h  main.cpp
laba3/1.2/: 2  Time.cpp  Time.h  main.cpp
laba3/2/: 2  Office.cpp  Office.h  Sotr.cpp  Sotr.h  main.cpp
laba3/3/: 3  Office.cpp  Office.h  Sotr.h  main.cpp  sotr.cpp
laba3/4/: 4  Time.cpp  Time.h  main.cpp
laba3/5/: 5  Time.cpp  Time.h  main.cpp
laba4/: README.md
laba4/1/: 1  Time.cpp  Time.h  main.cpp
laba4/2/: 2  Time.cpp  Time.h  main.cpp
laba5/: README.md
laba5/1/: 1  main.cpp  za1  za1.cpp  za1.h
laba5/2/: 2  main.cpp  za2.cpp  za2.h
laba5/3/: 3  main.cpp  za3.cpp  za3.h
laba5/4/: 4  4.cpp  4.h  main.cpp  zad4.txt
laba5/5/: 5  5.cpp  5.h  main.cpp  zad5.txt
laba5/6/: 6  6.cpp  6.h  input.txt  main.cpp  output.txt
laba6/: README.md
laba6/1/: 1  main.cpp  za1.cpp  za1.h
laba6/2/: 2  main.cpp  za2.cpp  za2.h
laba6/3/: 3  main.cpp  za3.cpp  (+1 more)
parkingapp/: CMakeLists.txt  README.md  main.cpp  main.qml  owner.cpp  owner.h  parkingmanager.cpp  parkingmanager.h  parkingsession.cpp  parkingsession.h  parkingspot.cpp  parkingspot.h  vehicle.cpp  vehicle.h
